width and height size of screen

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       <section class="banner_main" style="
                       display: grid;
                       place-items: center;
+                      width: 100vw;
+                      height: 100vh;
                       ">
                      <div class="col-md-7 padding_right1">
                         <div class="text-img">
